--- a/Ix4ConnectorService/SqlDataExtractor/SqlDataExtractor.csproj
+++ b/Ix4ConnectorService/SqlDataExtractor/SqlDataExtractor.csproj
@@ -35,7 +35,9 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Windows" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -61,6 +63,9 @@
     </Compile>
     <Compile Include="MsSqlCustomerDataExtractor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Settings\View\DBSettingsView.xaml.cs">
+      <DependentUpon>DBSettingsView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="SqlTableArticleExplorer.cs" />
     <Compile Include="SqlTableDeliveryExplorer.cs" />
     <Compile Include="SqlTableExplorer.cs" />
@@ -94,8 +99,14 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Settings\View\DBSettingsView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Settings\ViewModel\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
