--- a/Ix4ConnectorService/SqlDataExtractor/SqlDataExtractor.csproj
+++ b/Ix4ConnectorService/SqlDataExtractor/SqlDataExtractor.csproj
@@ -63,8 +63,21 @@
     </Compile>
     <Compile Include="MsSqlCustomerDataExtractor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Settings\ViewModel\DBSettingsViewModel.cs" />
+    <Compile Include="Settings\ViewModel\MsSqlArticleViewModel.cs" />
+    <Compile Include="Settings\ViewModel\MsSqlDeliveryViewModel.cs" />
+    <Compile Include="Settings\ViewModel\MsSqlOrdersViewModel.cs" />
     <Compile Include="Settings\View\DBSettingsView.xaml.cs">
       <DependentUpon>DBSettingsView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Settings\View\MsSqlArticleSettingsView.xaml.cs">
+      <DependentUpon>MsSqlArticleSettingsView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Settings\View\MsSqlDeliveriesSettingsView.xaml.cs">
+      <DependentUpon>MsSqlDeliveriesSettingsView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Settings\View\MsSqlOrdersSettingsView.xaml.cs">
+      <DependentUpon>MsSqlOrdersSettingsView.xaml</DependentUpon>
     </Compile>
     <Compile Include="SqlTableArticleExplorer.cs" />
     <Compile Include="SqlTableDeliveryExplorer.cs" />
@@ -103,10 +116,20 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Settings\View\MsSqlArticleSettingsView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Settings\View\MsSqlDeliveriesSettingsView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Settings\View\MsSqlOrdersSettingsView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Settings\ViewModel\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
