--- a/Ix4ConnectorService/Ix4ServiceConfigurator/Ix4ServiceConfigurator.csproj
+++ b/Ix4ConnectorService/Ix4ServiceConfigurator/Ix4ServiceConfigurator.csproj
@@ -93,6 +93,7 @@
     <Compile Include="EventArguments\ServiceControllerStatusEventArg.cs" />
     <Compile Include="ServiceInfoWrapper.cs" />
     <Compile Include="Settings.cs" />
+    <Compile Include="ViewModel\ExportDataSettingsViewModel.cs" />
     <Compile Include="ViewModel\ImportDataItemViewModel.cs" />
     <Compile Include="ViewModel\ImportDataSettingsViewModel.cs" />
     <Compile Include="ViewModel\IPwd.cs" />
