--- a/Ix4ConnectorService/SqlDataExtractor/SqlDataExtractor.csproj
+++ b/Ix4ConnectorService/SqlDataExtractor/SqlDataExtractor.csproj
@@ -16,7 +16,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\..\..\ServiceProgram\Debug\Plugins\</OutputPath>
+    <OutputPath>..\..\..\ServiceProgram\Ix4AgentRelease\Plugins\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
