--- a/Ix4ConnectorService/ConnectorWorkflowManager/ConnectorWorkflowManager.csproj
+++ b/Ix4ConnectorService/ConnectorWorkflowManager/ConnectorWorkflowManager.csproj
@@ -16,7 +16,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\..\..\ServiceProgram\Debug\</OutputPath>
+    <OutputPath>..\..\..\ServiceProgram\Ix4AgentRelease\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -31,6 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
