--- a/Ix4ConnectorService/Ix4Models/Ix4Models.csproj
+++ b/Ix4ConnectorService/Ix4Models/Ix4Models.csproj
@@ -32,6 +32,7 @@
   <ItemGroup>
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -41,11 +42,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Attributes\ExportDataProcessorAttribute.cs" />
     <Compile Include="BaseViewModel.cs" />
     <Compile Include="Class1.cs" />
     <Compile Include="Converters\XmlDataConverterExtensions.cs" />
     <Compile Include="CurrentServiceInformation.cs" />
     <Compile Include="CustomDataSourceTypes.cs" />
+    <Compile Include="DataProviders\MsSqlDataProvider\MsSqlDataProvider.cs" />
     <Compile Include="DataSourceInfo.cs" />
     <Compile Include="DbConnectionStringBuilder.cs" />
     <Compile Include="Enums\MailLogLevel.cs" />
@@ -56,6 +59,7 @@
     <Compile Include="Interfaces\ICryptor.cs" />
     <Compile Include="Interfaces\ICustomerDataConnector.cs" />
     <Compile Include="Interfaces\IDataProcessor.cs" />
+    <Compile Include="Interfaces\INameMetadata.cs" />
     <Compile Include="Interfaces\IPluginSettings.cs" />
     <Compile Include="Ix4ComplexModel.cs" />
     <Compile Include="Ix4RequestProps.cs" />
@@ -110,7 +114,12 @@
       <Project>{20BC0FD4-CEC0-4DF9-B96A-AFD6026DC84E}</Project>
       <Name>CryptoModule</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SinplestLogger\SimplestLogger.csproj">
+      <Project>{18B499E8-956D-45C0-A9F7-6314CC00B777}</Project>
+      <Name>SimplestLogger</Name>
+    </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
