--- a/Ix4ConnectorService/WWDataProcessor/WWDataProcessor.csproj
+++ b/Ix4ConnectorService/WWDataProcessor/WWDataProcessor.csproj
@@ -42,6 +42,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataProcessor.cs" />
+    <Compile Include="Helpers\NavisionXmlOut.cs">
+      <DependentUpon>NavisionXmlOut.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="Helpers\XmlDataConverterExtensions.cs" />
     <Compile Include="Properties\LustUpdateSettings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
@@ -70,6 +74,9 @@
   <ItemGroup>
     <None Include="app.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Helpers\NavisionXmlOut.xsd">
+      <SubType>Designer</SubType>
     </None>
     <None Include="Properties\LustUpdateSettings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
