--- a/Ix4ConnectorService/Ix4Models/Ix4Models.csproj
+++ b/Ix4ConnectorService/Ix4Models/Ix4Models.csproj
@@ -49,16 +49,18 @@
     <Compile Include="CurrentServiceInformation.cs" />
     <Compile Include="CustomDataSourceTypes.cs" />
     <Compile Include="DataProviders\MsSqlDataProvider\MsSqlDataProvider.cs" />
+    <Compile Include="DataProviders\XmlDataProvider\XmlDataProvider.cs" />
     <Compile Include="DataSourceInfo.cs" />
     <Compile Include="DbConnectionStringBuilder.cs" />
+    <Compile Include="EDLastUpdate.cs" />
     <Compile Include="Enums\MailLogLevel.cs" />
     <Compile Include="Enums\XmlFolderTypes.cs" />
     <Compile Include="Enums\XmlResultHandleActions.cs" />
-    <Compile Include="ExportDataLastUpdate.cs" />
     <Compile Include="ExtensionMethods.cs" />
     <Compile Include="Interfaces\ICryptor.cs" />
     <Compile Include="Interfaces\ICustomerDataConnector.cs" />
     <Compile Include="Interfaces\IDataProcessor.cs" />
+    <Compile Include="Interfaces\IDataProvider.cs" />
     <Compile Include="Interfaces\INameMetadata.cs" />
     <Compile Include="Interfaces\IPluginSettings.cs" />
     <Compile Include="Ix4ComplexModel.cs" />
