--- a/Ix4ConnectorService/DataProcessorHelper/DataProcessorHelper.csproj
+++ b/Ix4ConnectorService/DataProcessorHelper/DataProcessorHelper.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3C5A57D9-3352-4149-85C1-CAF909EF8E67}</ProjectGuid>
+    <ProjectGuid>{C270CD3D-165D-4379-A9F7-2CF569A1ACA1}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>WWDataProcessor</RootNamespace>
-    <AssemblyName>WWDataProcessor</AssemblyName>
+    <RootNamespace>DataProcessorHelper</RootNamespace>
+    <AssemblyName>DataProcessorHelper</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,7 +31,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -39,41 +38,40 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataProcessor.cs" />
-    <Compile Include="Helpers\NavisionXmlOut.cs">
-      <DependentUpon>NavisionXmlOut.xsd</DependentUpon>
+    <Compile Include="BaseDataProcessor.cs" />
+    <Compile Include="ImportDataSourcesBuilder.cs" />
+    <Compile Include="Properties\LustUpdateSettings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>LustUpdateSettings.settings</DependentUpon>
     </Compile>
-    <Compile Include="Helpers\XmlDataConverterExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UpdateTimeWatcher.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DataProcessorHelper\DataProcessorHelper.csproj">
-      <Project>{c270cd3d-165d-4379-a9f7-2cf569a1aca1}</Project>
-      <Name>DataProcessorHelper</Name>
-      <Private>False</Private>
-    </ProjectReference>
+    <None Include="app.config" />
+    <None Include="Properties\LustUpdateSettings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>LustUpdateSettings.Designer.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Ix4Connector\Ix4Connector.csproj">
       <Project>{4D524A01-B026-4EDE-9BC9-28A83C160A34}</Project>
       <Name>Ix4Connector</Name>
-      <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\Ix4Models\Ix4Models.csproj">
-      <Project>{FC7C4D19-401C-43B8-A054-1F4C1C6B8228}</Project>
+      <Project>{fc7c4d19-401c-43b8-a054-1f4c1c6b8228}</Project>
       <Name>Ix4Models</Name>
-      <Private>False</Private>
+      <Private>True</Private>
     </ProjectReference>
     <ProjectReference Include="..\SinplestLogger\SimplestLogger.csproj">
       <Project>{18B499E8-956D-45C0-A9F7-6314CC00B777}</Project>
       <Name>SimplestLogger</Name>
-      <Private>False</Private>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Helpers\NavisionXmlOut.xsd">
-      <SubType>Designer</SubType>
-    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
