--- a/Ix4ConnectorService/DataProcessorHelper/Properties/LustUpdateSettings.settings
+++ b/Ix4ConnectorService/DataProcessorHelper/Properties/LustUpdateSettings.settings
@@ -1,5 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="WWDataProcessor.Properties" GeneratedClassName="LustUpdateSettings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="DataProcessorHelper.Properties" GeneratedClassName="LustUpdateSettings">
   <Profiles />
   <Settings>
     <Setting Name="Articles" Type="System.Int64" Scope="User">
@@ -11,7 +11,7 @@
     <Setting Name="Deliveries" Type="System.Int64" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
-    <Setting Name="ExportData" Type="Ix4Models.ExportDataLastUpdate" Scope="User">
+    <Setting Name="ExportData" Type="Ix4Models.EDLastUpdate" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
   </Settings>
