--- a/Ix4ConnectorService/DataProcessorHelper/DataProcessorHelper.csproj
+++ b/Ix4ConnectorService/DataProcessorHelper/DataProcessorHelper.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseDataProcessor.cs" />
+    <Compile Include="DataEnsure.cs" />
     <Compile Include="ImportDataSourcesBuilder.cs" />
     <Compile Include="Properties\LustUpdateSettings.Designer.cs">
       <AutoGen>True</AutoGen>
