--- a/Ix4ConnectorService/DataProcessorHelper/DataProcessorHelper.csproj
+++ b/Ix4ConnectorService/DataProcessorHelper/DataProcessorHelper.csproj
@@ -63,15 +63,17 @@
     <ProjectReference Include="..\Ix4Connector\Ix4Connector.csproj">
       <Project>{4D524A01-B026-4EDE-9BC9-28A83C160A34}</Project>
       <Name>Ix4Connector</Name>
+      <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\Ix4Models\Ix4Models.csproj">
       <Project>{fc7c4d19-401c-43b8-a054-1f4c1c6b8228}</Project>
       <Name>Ix4Models</Name>
-      <Private>True</Private>
+      <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\SinplestLogger\SimplestLogger.csproj">
       <Project>{18B499E8-956D-45C0-A9F7-6314CC00B777}</Project>
       <Name>SimplestLogger</Name>
+      <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
