--- a/Ix4ConnectorService/WVDataProcessor/WVDataProcessor.csproj
+++ b/Ix4ConnectorService/WVDataProcessor/WVDataProcessor.csproj
@@ -23,8 +23,9 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
+	<AllowedReferenceRelatedFileExtensions></AllowedReferenceRelatedFileExtensions> 
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>..\..\..\ServiceProgram\Release\Clients\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
