--- a/Ix4ConnectorService/WVDataProcessor/WVDataProcessor.csproj
+++ b/Ix4ConnectorService/WVDataProcessor/WVDataProcessor.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArtikelInStoragesInfo.cs" />
     <Compile Include="DataProcessor.cs" />
     <Compile Include="ExportDataToSQL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
