--- a/Ix4ConnectorService/WV_newDataProcessor/WV_newDataProcessor.csproj
+++ b/Ix4ConnectorService/WV_newDataProcessor/WV_newDataProcessor.csproj
@@ -50,6 +50,7 @@
     <Compile Include="IDataTargetCollaborator.cs" />
     <Compile Include="INVDBdataExported.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SAdataExporter.cs" />
     <Compile Include="SqlTableCollaborator.cs" />
     <Compile Include="TableFieldMapInfo.cs" />
     <Compile Include="WV_DataProcessor.cs" />
@@ -70,6 +71,9 @@
       <Name>SimplestLogger</Name>
       <Private>False</Private>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Helpers\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
