--- a/Ix4ConnectorService/WV_newDataProcessor/WV_newDataProcessor.csproj
+++ b/Ix4ConnectorService/WV_newDataProcessor/WV_newDataProcessor.csproj
@@ -77,6 +77,10 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Helpers\" />
+    <Folder Include="ImportData\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
