--- a/Ix4ConnectorService/Ix4Models/app.config
+++ b/Ix4ConnectorService/Ix4Models/app.config
@@ -14,11 +14,23 @@
       <setting name="Deliveries" serializeAs="String">
         <value>0</value>
       </setting>
-      <setting name="ExportData" serializeAs="Xml">
+      <setting name="INVDB" serializeAs="String">
         <value/>
       </setting>
       <setting name="Articles" serializeAs="String">
         <value>1481621222</value>
+      </setting>
+      <setting name="GP" serializeAs="String">
+        <value/>
+      </setting>
+      <setting name="GS" serializeAs="String">
+        <value/>
+      </setting>
+      <setting name="CA" serializeAs="String">
+        <value/>
+      </setting>
+      <setting name="SA" serializeAs="String">
+        <value/>
       </setting>
     </Ix4Models.Properties.LastUpdate>
     <DataProcessorHelper.Properties.LustUpdateSettings>
