save update value

--- a/Ix4ConnectorService/Ix4Models/app.config
+++ b/Ix4ConnectorService/Ix4Models/app.config
@@ -15,22 +15,22 @@
         <value>0</value>
       </setting>
       <setting name="INVDB" serializeAs="String">
-        <value/>
+        <value>0</value>
       </setting>
       <setting name="Articles" serializeAs="String">
         <value>1481621222</value>
       </setting>
       <setting name="GP" serializeAs="String">
-        <value/>
+        <value>0</value>
       </setting>
       <setting name="GS" serializeAs="String">
-        <value/>
+        <value>0</value>
       </setting>
       <setting name="CA" serializeAs="String">
-        <value/>
+        <value>0</value>
       </setting>
       <setting name="SA" serializeAs="String">
-        <value/>
+        <value>0</value>
       </setting>
     </Ix4Models.Properties.LastUpdate>
     <DataProcessorHelper.Properties.LustUpdateSettings>
