--- a/Ix4ConnectorService/WV_newDataProcessor/WV_newDataProcessor.csproj
+++ b/Ix4ConnectorService/WV_newDataProcessor/WV_newDataProcessor.csproj
@@ -50,6 +50,8 @@
     <Compile Include="IDataMapper.cs" />
     <Compile Include="IDataTargetCollaborator.cs" />
     <Compile Include="ExportData\INVDBdataExported.cs" />
+    <Compile Include="ImportData\DataImporter.cs" />
+    <Compile Include="ImportData\ImportDataSourcesBuilder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ExportData\SAdataExporter.cs" />
     <Compile Include="SqlTableCollaborator.cs" />
@@ -75,7 +77,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Helpers\" />
-    <Folder Include="ImportData\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
