--- a/Ix4ConnectorService/Ix4Models/app.config
+++ b/Ix4ConnectorService/Ix4Models/app.config
@@ -32,6 +32,9 @@
       <setting name="SA" serializeAs="String">
         <value>0</value>
       </setting>
+      <setting name="GR" serializeAs="String">
+        <value>0</value>
+      </setting>
     </Ix4Models.Properties.LastUpdate>
     <DataProcessorHelper.Properties.LustUpdateSettings>
       <setting name="Deliveries" serializeAs="String">
