--- a/Ix4ConnectorService/Ix4Models/Properties/LastUpdate.settings
+++ b/Ix4ConnectorService/Ix4Models/Properties/LastUpdate.settings
@@ -26,5 +26,8 @@
     <Setting Name="SA" Type="System.Int64" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="GR" Type="System.Int64" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
