--- a/Ix4ConnectorService/WebStatisticsClient/WebStatisticsClient.csproj
+++ b/Ix4ConnectorService/WebStatisticsClient/WebStatisticsClient.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A292C322-3104-47AF-AB47-1EDFE0F96EFA}</ProjectGuid>
+    <ProjectGuid>{93F3AE92-6011-4ADC-B98B-E274348FB55A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ConnectorWorkflowManager</RootNamespace>
-    <AssemblyName>ConnectorWorkflowManager</AssemblyName>
+    <RootNamespace>WebStatisticsClient</RootNamespace>
+    <AssemblyName>WebStatisticsClient</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -24,15 +24,22 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\..\..\..\ServiceProgram\Release\</OutputPath>
+    <OutputPath>..\..\..\ServiceProgram\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,25 +48,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Ix4StatisticClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WorkflowManager.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Ix4Connector\Ix4Connector.csproj">
-      <Project>{4d524a01-b026-4ede-9bc9-28a83c160a34}</Project>
-      <Name>Ix4Connector</Name>
-    </ProjectReference>
+    <None Include="app.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Ix4Models\Ix4Models.csproj">
       <Project>{FC7C4D19-401C-43B8-A054-1F4C1C6B8228}</Project>
       <Name>Ix4Models</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SinplestLogger\SimplestLogger.csproj">
-      <Project>{18b499e8-956d-45c0-a9f7-6314cc00b777}</Project>
-      <Name>SimplestLogger</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\WebStatisticsClient\WebStatisticsClient.csproj">
-      <Project>{93F3AE92-6011-4ADC-B98B-E274348FB55A}</Project>
-      <Name>WebStatisticsClient</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
